LetsEncryptCertNginxIngress-Prod.yaml
## Deploy Nginx Ingress Controler ##
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/cloud/deploy.yaml

---
## Ingress ###

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    cert-manager.io/issuer: "letsencrypt-prod-issuer"
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - web1.goinit.net
    secretName: letsencrypt-prod-tls
  rules:
  - host: web1.goinit.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp1-service
              port:
                number: 9090

---
## Deployment ###

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp1-deployment
  labels:
    app: myapp1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp1
  template:
    metadata:
      labels:
        app: myapp1
    spec:
      containers:
      - name: myapp1
        image: pranavdhopey/myweb:httpdv3
        ports:
        - containerPort: 80

---
### Deploy Service ###

apiVersion: v1
kind: Service
metadata:
  name: myapp1-service
spec:
  selector:
    app: myapp1
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 80
  type: ClusterIP
