ManagedCertOnGKEwithHTTP-HTTPSRedirect-IAP.yaml
---
## Deployment ###

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 5Mi  #1KiB = 1024bytes  
            cpu: 5m      #1cpu = 1000m cpu
          limits:
            memory: 10Mi
            cpu: 7m

---
### Deploy Service ###

apiVersion: v1
kind: Service
metadata:
  name: web-service
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "iap-config"}'
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort			
  
---
## Deploy Ingress ##

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress-ssl
  annotations:
    kubernetes.io/ingress.global-static-ip-name: pranav-static-ip
    networking.gke.io/managed-certificates: gcp-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "web-frontend-config"
spec:
  rules:
  - host: hello-pranav.goinit.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: web-service
              port:
                number: 80
